added ocde to check for sizeof adjacency hashtable

--- a/class07_clustcoeff_python3.ipynb
+++ b/class07_clustcoeff_python3.ipynb
@@ -295,7 +295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 10: Now try computing the local clustering coefficient using a \"list of hashes\" approach; compute the local clustering coefficients for all vertices, and compare to the timing for R.  Which is faster, the python3 implementation or the R implementation?"
+    "Step 10: Now try computing the local clustering coefficient using a \"list of hashtables\" approach; compute the local clustering coefficients for all vertices, and compare to the timing for R.  Which is faster, the python3 implementation or the R implementation?"
    ]
   },
   {
@@ -342,13 +342,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So the built-in python dictionary type gave us fantastic performance.  But is this coming at the cost of huge memory footprint? (after all, we could use an adjacency matrix if we were willing to accommodate O(n^2) memory usage). Let's check the size of our adjacency \"list of hashtables\", in MB:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "81.793984"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pympler import asizeof\n",
+    "asizeof.asizeof(ppi_adj_hash)/1000000"
+   ]
   }
  ],
  "metadata": {
