more clear code for find_bst_forest based on suggestion from George Harder

--- a/class07_clustcoeff_python3.ipynb
+++ b/class07_clustcoeff_python3.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -135,7 +135,7 @@
     "    return theforest\n",
     "\n",
     "def find_bst_forest(bst_forest, i, j):\n",
-    "    return bst_forest[i].__contains__(j)\n",
+    "    return j in bst_forest[i]\n",
     "\n",
     "ppi_adj_forest = get_bst_forest(ppi_adj_list)"
    ]
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -160,7 +160,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "135.2973329210654\n"
+      "128.635312106926\n"
      ]
     }
    ],
@@ -178,7 +178,7 @@
     "        nctr = 0\n",
     "        for i in range(0, nneighbors):\n",
     "            for j in range(i+1, nneighbors):\n",
-    "                if find_bst_forest(ppi_adj_forest, neighbors[i], neighbors[j]):\n",
+    "                if neighbors[j] in ppi_adj_forest[neighbors[i]]:\n",
     "                    nctr += 1\n",
     "        civals[n] = nctr/(nneighbors*(nneighbors-1)/2)\n",
     "        \n",
