bugfix; thanks to Qi Wei for pointing this bug out

--- a/class19_correlnet_python3.ipynb
+++ b/class19_correlnet_python3.ipynb
@@ -97,7 +97,7 @@
    "source": [
     "M = gene_matrix_for_network_df.shape[1]\n",
     "import scipy.stats\n",
-    "P_values = scipy.stats.norm.cdf(-numpy.abs(z_scores)*((M-3)**0.5))"
+    "P_values = 2*scipy.stats.norm.cdf(-numpy.abs(z_scores)*((M-3)**0.5))"
    ]
   },
   {
