--- a/class19_correlnet_R.ipynb
+++ b/class19_correlnet_R.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -184,11 +184,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Attaching package: 'igraph'\n",
+      "\n",
+      "The following objects are masked from 'package:stats':\n",
+      "\n",
+      "    decompose, spectrum\n",
+      "\n",
+      "The following object is masked from 'package:base':\n",
+      "\n",
+      "    union\n",
+      "\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -215,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -245,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -253,16 +270,16 @@
     {
      "data": {
       "text/html": [
-       "1.96376019495302"
+       "2.74535775518688"
       ],
       "text/latex": [
-       "1.96376019495302"
+       "2.74535775518688"
       ],
       "text/markdown": [
-       "1.96376019495302"
+       "2.74535775518688"
       ],
       "text/plain": [
-       "[1] 1.96376"
+       "[1] 2.745358"
       ]
      },
      "metadata": {},
@@ -270,8 +287,17 @@
     }
    ],
    "source": [
-    "power.law.fit(degree_distribution(final_network))$alpha"
+    "power.law.fit(degree(final_network))$alpha"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
