fixing dependence on pbapply package

--- a/class21_reveal_R.ipynb
+++ b/class21_reveal_R.ipynb
@@ -164,8 +164,7 @@
     "            break\n",
     "        }\n",
     "        print(sprintf(\"Getting joint entropies for combinations of %d genes\", stage+1))\n",
-    "        next_stage_entropies <- array(rep(NA,N^(stage+1)), dim=rep(N,stage+1))\n",
-    "        entropies_for_stages[[stage+1]] <- array(pbapply(  expand.grid(rep(list(1:N), (stage+1))), 1, function(gene_set) {\n",
+    "        entropies_for_stages[[stage+1]] <- array(apply(  expand.grid(rep(list(1:N), (stage+1))), 1, function(gene_set) {\n",
     "            entropy_multiple_vecs(gene_matrix_binarized[gene_set,])\n",
     "            }), dim=rep(N, stage+1))\n",
     "    }\n",
