fixing dependence on pbapply package

--- a/class21_reveal_R.ipynb
+++ b/class21_reveal_R.ipynb
@@ -156,6 +156,18 @@
    },
    "outputs": [],
    "source": [
+    "ratio_thresh <- 0.1\n",
+    "genes_to_fit <- 1:N\n",
+    "stage <- 0\n",
+    "regulators <- list(rep(NA, N))\n",
+    "min_gene_to_fit <- Inf\n",
+    "entropies_for_stages <- list()\n",
+    "max_stage <- 2\n",
+    "\n",
+    "print(sprintf(\"Getting marginal entropies\"))\n",
+    "entropies_for_stages[[1]] <- apply(gene_matrix_binarized, 1, function(row) { entropy_multiple_vecs(matrix(row, nrow=1)) })\n",
+    "last_gene_to_fit <- Inf\n",
+    "\n",
     "while(length(genes_to_fit) > 0) {\n",
     "    gene_to_fit <- genes_to_fit[1]\n",
     "    if (last_gene_to_fit > gene_to_fit) {\n",
