a couple of edits to clarify

--- a/Homework2_R_template.ipynb
+++ b/Homework2_R_template.ipynb
@@ -197,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get motif counts for 10,000 different randomizations of the network.  You will need to use `replicate`, `motifs`, and `rewire` with the `loops=FALSE` option."
+    "Get motif counts for 10,000 different randomizations of the network.  You will need to use `replicate`, `motifs`, and `rewire` with the `loops=FALSE` option. Use niter=1000."
    ]
   },
   {
