--- a/igraph_graphviz_python3.ipynb
+++ b/igraph_graphviz_python3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -82,10 +82,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Graph at 0x7fb573d5b940>"
+       "<graphviz.dot.Graph at 0x7fe2c60df2b0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,9 +93,6 @@
    "source": [
     "import graphviz\n",
     "import igraph\n",
-    "#change path; workaround for local installation of graphviz\n",
-    "import os\n",
-    "#os.environ[\"PATH\"] += os.pathsep + '/mnt/jupyterusers/teegarda/usr/local/bin'\n",
     "g = graphviz.Graph()\n",
     "for x, y in [[0,1],[1,2],[2,4],[2,3],[4,1],[3,0]]:\n",
     "    g.edge(str(x), str(y))\n",
