add notes; ignore some folders

--- a/class02_ppi_python3.ipynb
+++ b/class02_ppi_python3.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Print the first six lines of the interaction datafile within the python/R session\n",
+    "2. Compute the frequencies of interaction types in the database, print in order of decreasing frequency\n",
+    "3. Compute the total number of protein-protein interactions in the database\n",
+    "4. Compute the total number of proteins that participate in protein-protein interactions\n",
+    "5. Compute the number of unique protein-protein interactions (undirected)\n",
+    "6. Optional: make it more interesting: do not use the file system for saving the SIF file or compressed SIF file\n",
+    "\n",
+    "For protein-protein interactions: “interacts-with”, “neighbor-of”, and “in-complex-with”"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
@@ -357,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
