--- a/class05_find_python3.ipynb
+++ b/class05_find_python3.ipynb
@@ -12,6 +12,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Assignment for today (based on the key concept of Newman 9.5)\n",
+    "\n",
+    "Today we will be exploring the computational running time for testing whether a pair of vertices has an edge between them (averaged over all vertex pairs), for different data structures for storing the graph (adjacency matrix, adjacency list, edge list, and \"adjacency forest\" (which Newman calls the \"adjacency tree\").\n",
+    "\n",
+    "This exercise is a straightforward generalization of the exercise from Class Session 4, but you'll need a new data structure to handle the \"adjacency forest\". Note for R users: in R, we will have to cheat by using an `environment` data structure (which is not implemented using a binary search tree but rather, a hash table). In this exercise, we'll try varying the graph's average vertex degree ($k$) while keeping the total number of vertices fixed at $n=1000$.\n",
+    "\n",
+    "To get started, you will need to write four functions:\n",
+    "\n",
+    "- `find_adj_matrix(adj_matrix, i, j)`\n",
+    "    - returns `True` if `i` and `j` are directly connected in the network described by the adjacency matrix\n",
+    "`adj_matrix`, or `False` otherwise.\n",
+    "- `find_adj_list(adj_list, i, j)`\n",
+    "    - returns `True` if `i` and `j` are directly connected in the network described by the adjacency list `adj_list`, or `False` otherwise\n",
+    "- `find_edge_list(edge_list, i, j)`\n",
+    "    - returns `True` if `i` and `j` are directly connected in the network described by the edge list `edge_list`, or `False` otherwise. (Note: I opted not to do any timing on `find_edge_list` because the code was running quite slow, but you can try it if you are more patient than I am).\n",
+    "- `find_adj_forest(adj_forest, i, j)`\n",
+    "    - returns `True` if `i` and `j` are directly connected in the network described by the \"adjacency forest\" `adj_forest`, or `False` otherwise. \n",
+    "    - The adjacency forest can be a list of AVL binary search trees (using the `AVLTree` class from the `bintrees` python package), or it can be a list of dictionary data types (which is slightly different from the binary search tree suggested in Newman 9.5, but still useful for this exercise).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In this exercise, we'll compare the asymptotic computational running time for testing if there is an edge between a pair of vertices, averaged over all the vertices in the graph. We'll do it for an undirected graph (Barabasi-Albert model) with an average vertex degree that will be fixed for a given graph but that we will vary. The  number of vertices of the graph will be fixed at 1000."
    ]
   },
@@ -107,9 +131,19 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3, 4], [0, 2], [0, 1, 3], [0, 2, 4], [0, 3]]\n",
+      "[AVLTree({1: None, 2: None, 3: None, 4: None}), AVLTree({0: None, 2: None}), AVLTree({0: None, 1: None, 3: None}), AVLTree({0: None, 2: None, 4: None}), AVLTree({0: None, 3: None})]\n",
+      "[AVLTree({1: None, 2: None, 3: None, 4: None}), AVLTree({0: None, 2: None}), AVLTree({0: None, 1: None, 3: None}), AVLTree({0: None, 2: None, 4: None}), AVLTree({0: None, 3: None})]\n"
+     ]
+    }
+   ],
    "source": [
     "def get_bst_forest(theadjlist):\n",
     "    g_adj_list = theadjlist\n",
@@ -118,9 +152,29 @@
     "    for i in range(0,n):        \n",
     "        itree = bintrees.AVLTree()\n",
     "        for j in g_adj_list[i]:\n",
-    "            itree.insert(j,1)\n",
+    "            itree.insert(j, None)\n",
     "        theforest.append(itree)\n",
-    "    return theforest"
+    "    return theforest\n",
+    "\n",
+    "def get_bst_forest2(theadjlist):\n",
+    "    n = len(theadjlist)\n",
+    "    for i in range(0, n):\n",
+    "        m = len(theadjlist[i])\n",
+    "        values = [None] * m\n",
+    "        pairs = [*zip(theadjlist[i], values)]\n",
+    "        itree = bintrees.AVLTree(pairs)\n",
+    "        \n",
+    "        yield itree\n",
+    "\n",
+    "g = igraph.Graph.Barabasi(5, 2)\n",
+    "g_adj_list = g.get_adjlist()\n",
+    "        \n",
+    "g_bst_forest1 = get_bst_forest(g_adj_list)\n",
+    "g_bst_forest2 = [*get_bst_forest2(g_adj_list)]\n",
+    "\n",
+    "print(g_adj_list)\n",
+    "print(g_bst_forest1)\n",
+    "print(g_bst_forest2)"
    ]
   },
   {
@@ -315,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
