--- a/class06_degdist_python3.ipynb
+++ b/class06_degdist_python3.ipynb
@@ -15,6 +15,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let $p_k$ be the fraction of vertices in $G$ that have degree $k$, i.e. in $G$ there would be $p_k \\times n$ vertices with degree $k$.\n",
+    "\n",
+    "Degree sequence $\\lbrace k_1, \\dots, k_n \\rbrace$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## New Assignment: calculate degree distribution of the human PPI\n",
+    "\n",
+    "0. Make a hypothesis: do you think the human PPI will be \"scale free\"?\n",
+    "1. Select only the `interacts-with` and `in-complex-with` rows of `shared/pathway_commons.sif`\n",
+    "2. Eliminate redundant interactions from the dataset\n",
+    "    - these would all be redundant, for this purpose:\n",
+    "        - A interacts-with B\n",
+    "        - B interacts-with A\n",
+    "        - A in-complex-with B\n",
+    "3. Count how many times each protein symbol appears in any interaction \n",
+    "    - it is OK if an interaction like this gets counted twice:\n",
+    "        - A interacts-with A\n",
+    "that is basically computing the vertex degree k for each protein\n",
+    "4. Obtain a histogram of counts of $k$ values in about 30 equally spaced bins from 1 to the maximum $k$ value\n",
+    "5. Call the $k$ value at the center of each bin, $k_{bin}$, and the count of proteins whose $k$ values are in that\n",
+    "bin, $N(k_{bin})$.\n",
+    "6. Plot the relationship between $N(k_{bin})$ and $k_{bin}$, on a log-log scatter plot.\n",
+    "7. Do a linear regression to the points on the plot in the \"linear range\" for small $k_{bin}$, which should be the first five points or so. The negative of the slope gives you the \"scaling exponent\" gamma.\n",
+    "8. Compare the gamma that you got for the human PPI to the gamma for the yeast PPI.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -45,7 +79,7 @@
    "outputs": [],
    "source": [
     "sif_data = pandas.read_csv(\"shared/pathway_commons.sif\",\n",
-    "                            sep=\"\\t\", names=[\"species1\",\"interaction_type\",\"species2\"])"
+    "                            sep=\"\\t\", names=[\"species1\", \"interaction_type\", \"species2\"])"
    ]
   },
   {
@@ -139,6 +173,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- `breaks`: the cutoff points for the bins. 你记忆成 \"breakpoints\" 就好了\n",
+    "    - 所以 $n+1$ 个 breaks 确定 $n$ 个 bins\n",
+    "    - 注意 R 里 `hist(breaks=20)` 表示自行根据数据定 20 个 breaks，也就是 19 个 bins\n",
+    "    - `hist(breaks=c(17,20,23,26,29))` 这样写才是自己指定具体的 break 值\n",
+    "- `counts`: count of examples in each bin. 也就是每个 bin 的高度"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
@@ -152,6 +197,7 @@
     "hist_counts = hist_res[0]\n",
     "hist_breaks = hist_res[1]\n",
     "hist_breaks_np = np.array(hist_breaks)\n",
+    "# 取每一对 breaks 的中间值\n",
     "kvals = 0.5*(hist_breaks_np[0:(nbins-1)]+hist_breaks_np[1:nbins])"
    ]
   },
@@ -270,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
