--- a/class10_closeness_python3.ipynb
+++ b/class10_closeness_python3.ipynb
@@ -14,6 +14,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Closeness Centrality\n",
+    "\n",
+    "Closeness centrality measures the mean distance from a vertex to other vertices.\n",
+    "\n",
+    "A geodesic path is the shortest path between 2 vertices. Suppose $d_{ij}$ is the length of a geodesic path from vertex $i$ to $j$.\n",
+    "\n",
+    "Mean geodesic distance of vertex $i$: $\\ell_i = \\frac{1}{n}\\sum_j d_{ij}$\n",
+    "\n",
+    "有些场合里会排除掉 $d_ii$，从而得到 $\\ell_i = \\frac{1}{n - 1}\\sum_{j \\neq i} d_{ij}$，但本质不影响，随便用哪个公式都行。书上用的是前面那个\n",
+    "\n",
+    "Closeness Centrality $C_i = \\frac{1}{\\ell_i} = \\frac{n}{\\sum_j d_{ij}}$\n",
+    "\n",
+    "Harmonic mean: 与一般的 mean = $\\frac{\\sum \\limits_{i=1}^{n} x_i}{n}$ 不同，harmonic mean = $\\frac{n}{\\frac{1}{x_{1}} + \\frac {1}{x_{2}} + \\cdots + \\frac{1}{x_{n}}} = \\frac{n}{\\sum \\limits _{i=1}^{n} \\frac{1}{x_{i}}}$\n",
+    "\n",
+    "从 harmonic mean 出发，我们也可以定义 $C_i^{\\prime} = \\frac{1}{\\ell_i} = \\frac{1}{n-1} \\sum_{j \\neq i} \\frac{1}{d_{ij}}$，但这个定义很少使用。\n",
+    "\n",
+    "Mean geodesic distance between all pairs of vertices (in one component): $\\ell = \\frac{1}{n^2}\\sum_{i,j} d_{ij} = \\frac{1}{n} \\sum_i \\ell_i$\n",
+    "\n",
+    "多个 components 的情况待补充\n",
+    "\n",
+    "## Groups of vertices\n",
+    "\n",
+    "clique: fully connected\n",
+    "\n",
+    "- 注意 $k$-clique 并不是 clique\n",
+    "- $k$-clique 只要求任意两点有 path 且长度 $\\leq k$\n",
+    "- $1$-clique $\\iff$ clique\n",
+    "\n",
+    "Less stringently, A $k$-plex of size $n$ is a maximal connected subgraph of $n$ vertices in $G$  such that each vertex is connected to at least $n-k$ vertices.\n",
+    "\n",
+    "- $1$-plex $\\iff$ clique\n",
+    "- 注意是 at least $n-k$，所以 $1$-plex 一定是 $2$-plex，依此类推\n",
+    "\n",
+    "A $k$-core of a graph $G$ is a maximal connected subgraph of $G$ in which all vertices have degree at least $k$\n",
+    "\n",
+    "- A $k$-core of $n$ vertices is also an $(n-k)$-plex\n",
+    "\n",
+    "$k$-component: 待整理"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Load in the SIF file for Pathway Commons"
    ]
   },
@@ -241,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
