--- a/class07_clustcoeff_python3.ipynb
+++ b/class07_clustcoeff_python3.ipynb
@@ -14,6 +14,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Transitivity\n",
+    "\n",
+    "考虑 undirected 的情况。\n",
+    "\n",
+    "假设我们有一个 length 为 2 的 path $u \\rightarrow v \\rightarrow w$，如果有 $u \\rightarrow w$，i.e. 形成了 triangle (social network 称为 closed triad)，我们称这个 length 为 2 的 path _\"closed\"_。\n",
+    "\n",
+    "cluster coefficient $C = \\frac{\\text{# of closed paths of length 2}}{\\text{# of paths of length 2}}$\n",
+    "\n",
+    "$C=1 \\Rightarrow $ perfect transitivity. I.e. $G$ is a network whose components are all _**cliques**_\n",
+    "\n",
+    "- 严格来说，这里 clique 应该是指 fully connected subgraph\n",
+    "- 因为严格来说 A clique is a subset of vertices of an undirected graph such that its induced subgraph is complete; that is, every two distinct vertices in the clique are adjacent.\n",
+    "\n",
+    "$C=0 \\Rightarrow $ no closed triad at all. E.g. trees.\n",
+    "\n",
+    "一个等价的计算方法：$C = \\frac{(\\text{# of triangles}) \\times 6}{\\text{# of paths of length 2}}$\n",
+    "\n",
+    "对一条 path of length 2，$u \\rightarrow v \\rightarrow w$ 而言，我们称有两个 _**connected triples**_，一个是 $uvw$ 一个是 $wvu$\n",
+    "\n",
+    "所以又有一个等价的计算方法：$C = \\frac{(\\text{# of triangles}) \\times 3}{\\text{# of connected triples}}$\n",
+    "\n",
+    "## Local Clustering and Redundancy\n",
+    "\n",
+    "Let $N_v$ be the set of neighbours of vertex $v$. \n",
+    "\n",
+    "$C_v = \\frac{\\text{# of }(u,v) \\text{ such that } u,v \\text{ are connected and } u,v \\in N_v}{\\text{# of }(u,v) \\text{ such that } u,v \\in N_v}$\n",
+    "\n",
+    "其中 $\\text{# of }(u,v) \\text{ such that } u,v \\in N_v = \\frac{1}{2} k_v (k_v - 1)$\n",
+    "\n",
+    "## 待续\n",
+    "\n",
+    "20161005.pdf 也要补充上来"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Step 1:  load in the SIF file (refer to Class 6 exercise)"
    ]
   },
@@ -388,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
