--- a/class26_bayesnet_python3.ipynb
+++ b/class26_bayesnet_python3.ipynb
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 373,
    "metadata": {
     "collapsed": false
    },
@@ -258,20 +258,34 @@
     "    df1 = df1.drop(\"count\", 1)\n",
     "    \n",
     "    if len(parents_vertex) > 0:\n",
-    "        df3 = discret_data[parents_vertex]\n",
+    "\n",
+    "        # sum up log-factorial-counts values for all possible states of \"vertex\" and its parent vertices, \n",
+    "        # for each possible combination of parent vertices\n",
     "        nijkdf = df1.groupby(by=df1.columns[list(range(0,len(parents_vertex)))].tolist(), \n",
     "                    as_index=False).sum()\n",
+    "        \n",
+    "        # count number of cells with each possible combination of states for its parent vertices\n",
+    "        df3 = discret_data[parents_vertex]\n",
     "        nijdf = df3.groupby(df3.columns.values.tolist(), as_index=False).size().reset_index()\n",
     "        nijdf_col_names = nijdf.columns.values\n",
     "        nijdf_col_names[len(nijdf_col_names)-1] = \"count\"\n",
     "        nijdf.columns = nijdf_col_names\n",
+    "        \n",
+    "        # compute the log factorial of the counts\n",
     "        nijdf[\"countfactorial\"] = math.log(2) - lfactorial(2 + nijdf[\"count\"])\n",
+    "        \n",
+    "        # drop the \"count\" column as we no longer need it\n",
     "        nijdf = nijdf.drop(\"count\", 1)\n",
+    "        \n",
+    "        # merge the two log-factorial-count values from nijdf and nijkdf, into two columns in a single dataframe\n",
     "        nmerge = nijdf.merge(nijkdf, how=\"outer\", \n",
     "                     on=nijkdf.columns[0:(len(nijkdf.columns)-1)].values.tolist(),\n",
     "                     copy=False)\n",
+    "        \n",
+    "        # sum the log-factorial-count values from nijdf and nijkdf\n",
     "        llh_res = numpy.sum(nmerge[\"countfactorial_x\"]+nmerge[\"countfactorial_y\"])\n",
     "    else:\n",
+    "        # we handle the case of no parent vertices specially, to simplify the code\n",
     "        M = discret_data.shape[0]\n",
     "        llh_res = math.log(2) - lfactorial(M + 2) + numpy.sum(df1[\"countfactorial\"].values)\n",
     "    return llh_res"
