--- a/class27_booleannetwork_R.ipynb
+++ b/class27_booleannetwork_R.ipynb
@@ -177,7 +177,7 @@
    "metadata": {},
    "source": [
     "Write a function that runs 10,000 simulations of the network. In each simulation, the procedure is:\n",
-    "- create a random binary vector of length 12, and call that vector `state`\n",
+    "- create a random binary vector of length 12, and call that vector `state` (make sure the first position of the state vector is set to zero)\n",
     "- iteratively call \"evolve\", passing the `state` to evolve and then updating `state` with the return value from `evolve`\n",
     "- check if `state` changes in the last call to `evolve`; if it does not, then you have reached a fixed point; stop iterating\n",
     "- compare the state to the rows of `fixed.points`; for the unique row `i` for which you find a match, increment the element in position `i` of `basin.counts`\n",
